--- a/roles/emacs_setup/tasks/main.yml
+++ b/roles/emacs_setup/tasks/main.yml
@@ -43,12 +43,13 @@
 - name: apt packages
   apt:
     name: 
-      - emacs26
       - aspell
-      - ripgrep
-      - libxml2-utils
-      - fonts-powerline
+      - emacs26
       - fonts-nanum 
+      - fonts-powerline
+      - fonts-symbola
+      - libxml2-utils
+      - ripgrep
 
 - name: npm install global packages, configure current node version via nvm for each package
   become_user: "{{ ansible_facts.env.SUDO_USER }}"
