--- a/main.yml
+++ b/main.yml
@@ -7,10 +7,10 @@
 
   roles: # order matters
     - common_software
-    - common_permissions
-    - common_config
-    - common_scm_repos
-    - cljc_setup
-    - vim_setup
-    - emacs_setup
-    - software_optional
+    # - common_permissions
+    # - common_config
+    # - common_scm_repos
+    # - cljc_setup
+    # - vim_setup
+    # - emacs_setup
+    # - software_optional
