nvm version bump, aws cli ssm session manager plugin, dos2unix

--- a/main.yml
+++ b/main.yml
@@ -12,6 +12,6 @@
     # - common_scm_repos
     # - cljc_setup
     # - vim_setup
-    - yubikey_setup
+    # - yubikey_setup
     # - emacs_setup
     # - software_optional
