--- a/roles/common_software/tasks/main.yml
+++ b/roles/common_software/tasks/main.yml
@@ -46,6 +46,7 @@
       - paperkey
       - pritunl-client-electron
       - python3-pip
+      - python3-venv 
       - rlwrap
       # - samba
       # - samba-common
