Change my projects dir

--- a/roles/common/vars/vars.common.yml
+++ b/roles/common/vars/vars.common.yml
@@ -1,5 +1,5 @@
 ---
 COMMON_LOCAL_USER_HOME: "/home/{{ ansible_facts.env.SUDO_USER }}"
-COMMON_LOCAL_PROJECTS_DIR: "{{ COMMON_LOCAL_USER_HOME }}/Projects"
+COMMON_LOCAL_PROJECTS_DIR: "{{ COMMON_LOCAL_USER_HOME }}/Projects/MINE"
 COMMON_INSTALL_DIR: "/opt"
 COMMON_EXEC_DIR: "/usr/local/bin"
