--- a/roles/common_scm_repos/vars/vars.scm_repos.yml
+++ b/roles/common_scm_repos/vars/vars.scm_repos.yml
@@ -1,5 +1,5 @@
 ---
-SCM_LOCAL_PROJECTS_DIR: "{{ COMMON_LOCAL_USER_HOME }}/Projects"
+SCM_LOCAL_PROJECTS_DIR: "{{ COMMON_LOCAL_USER_HOME }}/Projects/MINE"
 
 VIM_DIR: "{{ SCM_LOCAL_PROJECTS_DIR }}/Vim"
 VIM_REPOS:
